# Arm_Robot

./: CMakeLists.txt  README.md
arm_project/: package.xml
arm_project/config/: controller_configuration.yaml
arm_project/description/: Robot.xacro
arm_project/install/: setup.bash  setup.sh
arm_project/install/arm_project/share/ament_index/resource_index/parent_prefix_path/: arm_project
arm_project/install/arm_project/share/arm_project/: local_setup.sh  package.bash  package.ps1  package.zsh
arm_project/install/arm_project/share/arm_project/config/: config.yaml  rviz.rviz
arm_project/install/arm_project/share/arm_project/launch/: launch.py
arm_project/launch/: launch.py
arm_project/python+model/: Hands.py
install/: local_setup.sh  setup.ps1  setup.zsh
install/arm_project/share/arm_project/: local_setup.dsv  package.dsv  package.sh
install/arm_project/share/arm_project/cmake/: arm_projectConfig.cmake
python+model/: Hands.py
